brat/test/golden/imports/use-illegal-z4.brat.golden
Error in test/golden/imports/use-illegal-z4.brat@4:22
main = lib.x, lib.y, lib.z
                     ^^^^^

  lib.z not found in (value) environment

