brat/test/golden/imports/use-illegal-z4.brat
import lib hiding (z)

main :: Nat, Int, Bool
main = lib.x, lib.y, lib.z
